correction text overflow

--- a/style.css
+++ b/style.css
@@ -71,15 +71,18 @@ h4 {
     text-decoration: underline;
 }
 
-a {
-    color: #000;   
-}
-
 #credits {
     position: absolute;
-    bottom: 0%;
-    right: 0%;
+    bottom: 1%;
+    right: 1%;
     text-align: end;
-    display: flex;
-    flex-direction: column-reverse;
+}
+
+#credits summary {
+    color: #000;
+    font-weight: bold;
+}
+
+a {
+    color: #000;   
 }
